fixed button width problem, removed second "contact us" link in menu list, enabled y-overflow in order to scroll content when it doesnt fit

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -83,7 +83,7 @@
     gap: 48px;
     padding: 24px 20px 0;
     background-color: $c-dark-gray;
-
+    overflow-y: scroll;
     opacity: 0;
     transition: all $effectDuration;
     transform: translateX(-100%);
